--- a/app/package.json
+++ b/app/package.json
@@ -13,6 +13,7 @@
     "@types/auto-launch": "^5.0.1",
     "@types/socket.io-client": "^1.4.34",
     "auto-launch": "^5.0.5",
+    "electron-auto-update": "^1.2.2",
     "electron-updater": "^4.3.5",
     "socket.io-client": "^2.3.0",
     "update-electron-app": "^2.0.1"
