--- a/app/package.json
+++ b/app/package.json
@@ -11,10 +11,13 @@
   "license": "MIT",
   "dependencies": {
     "@types/auto-launch": "^5.0.1",
+    "@types/node-forge": "^0.9.6",
     "@types/socket.io-client": "^1.4.34",
     "auto-launch": "^5.0.5",
+    "curlrequest": "^1.0.1",
     "electron-auto-update": "^1.2.2",
     "electron-updater": "^4.3.5",
+    "node-forge": "^0.10.0",
     "socket.io-client": "^2.3.0",
     "update-electron-app": "^2.0.1"
   }
