--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "win": {
       "target": [
         "nsis",
-        "msi"
+        "squirrel"
       ]
     },
     "linux": {
@@ -231,6 +231,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.14.0",
     "@reduxjs/toolkit": "^1.4.0",
+    "electron-builder-squirrel-windows": "^22.10.4",
     "electron-debug": "^3.1.0",
     "electron-log": "^4.2.4",
     "electron-updater": "^4.3.4",
