--- a/package.json
+++ b/package.json
@@ -63,7 +63,6 @@
     },
     "win": {
       "target": [
-        "nsis",
         "squirrel"
       ]
     },
@@ -86,6 +85,7 @@
       "provider": "github",
       "owner": "DamieUk",
       "repo": "jbbf-agent-releases",
+      "token": "4e562a27520836e2e28f10f913bf349bc7daef8d",
       "private": false
     }
   },
