--- a/app/package.json
+++ b/app/package.json
@@ -1,7 +1,7 @@
 {
   "name": "jbbf-automation-agent",
   "productName": "JBBFAgent",
-  "version": "1.0.9",
+  "version": "1.1.0",
   "description": "JBBF agent for managing and executing platform scripts automatically",
   "main": "./main.prod.js",
   "scripts": {
@@ -11,10 +11,12 @@
   "license": "MIT",
   "dependencies": {
     "@types/auto-launch": "^5.0.1",
+    "@types/dom-parser": "^0.1.1",
     "@types/node-forge": "^0.9.6",
     "@types/socket.io-client": "^1.4.34",
     "auto-launch": "^5.0.5",
     "curlrequest": "^1.0.1",
+    "dom-parser": "^0.1.6",
     "electron-builder-squirrel-windows": "^22.10.4",
     "electron-updater": "^4.3.5",
     "node-forge": "^0.10.0",
