--- a/package.json
+++ b/package.json
@@ -62,9 +62,10 @@
       ]
     },
     "win": {
-      "target": [
-        "nsis",
-        "squirrel"
+      "target": ["nsis"],
+      "arch": [
+        "x64",
+        "ia32"
       ]
     },
     "linux": {
