--- a/app/package.json
+++ b/app/package.json
@@ -14,6 +14,7 @@
     "@types/socket.io-client": "^1.4.34",
     "@types/xmldom": "^0.1.30",
     "auto-launch": "^5.0.5",
+    "axios": "^0.21.1",
     "curlrequest": "^1.0.1",
     "electron-builder-squirrel-windows": "^22.10.4",
     "electron-updater": "^4.3.5",
