--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,7 +8,7 @@ jobs:
 
     strategy:
       matrix:
-        os: [macos-latest, windows-latest, ubuntu-latest]
+        os: [windows-latest]
 
     steps:
       - name: Check out Git repository
@@ -28,16 +28,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           yarn package-ci
-          yarn lint
-          yarn tsc
-          yarn test
-          yarn build-e2e
-
-      - if: matrix.os == 'ubuntu-latest'
-        run: |
-          Xvfb :99 &
-          disown -ar
-          echo "::set-env name=DISPLAY:::99"
 
       # TODO: Testcafe e2e are broken because of:
       # https://github.com/DevExpress/testcafe/issues/4512
