--- a/app/package.json
+++ b/app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jbbf-automation-agent",
-  "productName": "JBBFAgent",
+  "productName": "JBBFAgentService",
   "version": "1.1.16",
   "description": "JBBF agent for managing and executing platform scripts automatically",
   "main": "./main.prod.js",
@@ -18,6 +18,8 @@
     "curlrequest": "^1.0.1",
     "electron-builder-squirrel-windows": "^22.10.4",
     "electron-updater": "^4.3.5",
+    "node-windows": "^1.0.0-beta.5",
+    "simple-node-logger": "^18.12.24",
     "socket.io-client": "^2.3.0",
     "xmldom": "^0.4.0"
   }
