--- a/app/package.json
+++ b/app/package.json
@@ -18,6 +18,7 @@
     "curlrequest": "^1.0.1",
     "electron-builder-squirrel-windows": "^22.10.4",
     "electron-updater": "^4.3.5",
+    "node-powershell": "^4.0.0",
     "node-windows": "^1.0.0-beta.5",
     "simple-node-logger": "^18.12.24",
     "socket.io-client": "^2.3.0",
