--- a/app/package.json
+++ b/app/package.json
@@ -7,9 +7,11 @@
   "license": "MIT",
   "dependencies": {
     "@types/auto-launch": "^5.0.1",
+    "@types/express": "^4.17.11",
     "@types/socket.io-client": "^1.4.34",
     "@types/xmldom": "^0.1.30",
     "axios": "^0.21.1",
+    "express": "^4.17.1",
     "node-powershell": "^4.0.0",
     "node-windows": "^1.0.0-beta.5",
     "simple-node-logger": "^18.12.24",
