--- a/app/package.json
+++ b/app/package.json
@@ -6,16 +6,6 @@
   "main": "./main.prod.js",
   "license": "MIT",
   "dependencies": {
-    "@chilkat/ck-node14-arm": "^9.50.85",
-    "@chilkat/ck-node14-linux64": "^9.50.85",
-    "@chilkat/ck-node14-macosx": "^9.50.85",
-    "@chilkat/ck-node14-win-ia32": "^9.50.85",
-    "@chilkat/ck-node14-win64": "^9.50.85",
-    "@types/auto-launch": "^5.0.1",
-    "@types/express": "^4.17.11",
-    "@types/node-forge": "^0.9.7",
-    "@types/socket.io-client": "^1.4.34",
-    "@types/xmldom": "^0.1.30",
     "axios": "^0.21.1",
     "express": "^4.17.1",
     "node-forge": "^0.10.0",
@@ -25,5 +15,12 @@
     "simple-node-logger": "^18.12.24",
     "socket.io-client": "^2.3.0",
     "xmldom": "^0.4.0"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.11",
+    "@types/node-forge": "^0.9.7",
+    "@types/node-powershell": "^3.1.1",
+    "@types/socket.io-client": "^1.4.34",
+    "@types/xmldom": "^0.1.30"
   }
 }
