--- a/app/package.json
+++ b/app/package.json
@@ -6,6 +6,7 @@
   "main": "./main.prod.js",
   "license": "MIT",
   "dependencies": {
+    "auto-updater": "^1.0.2",
     "axios": "^0.21.1",
     "express": "^4.17.1",
     "node-forge": "^0.10.0",
